--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,129 @@
----
----
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{Moscati2023actr_cf_music,
+    title = {Integrating the ACT-R Framework with Collaborative Filtering for Explainable Sequential Music Recommendation},
+    author = {Moscati, Marta and Christian Wallmann and Markus Reiter-Haas and Dominik Kowald and Elisabeth Lex and Schedl, Markus},
+    booktitle = {Proc. of ACM RecSys},
+    location = {Singapore},
+    year = {2023},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2023_ACT-R.png},
+    key = {value},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{Moscati2023MultiObjectiveHyperOpt,
+    title = {Multiobjective Hyperparameter Optimization of Recommender Systems},
+    author = {Moscati, Marta and Deldjoo, Yashar and Carparelli, Giulio Davide and Schedl, Markus},
+    booktitle = {Proc. of Perspectives -- ACM RecSys},
+    location = {Singapore},
+    year = {2023},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2023_PerspectivesRecSys_MultiObjectiveHyperOpt.png},
+    key = {value},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{onion,
+author = {Moscati, Marta and Parada-Cabaleiro, Emilia and Deldjoo, Yashar and Zangerle, Eva and Schedl, Markus},
+title = {Music4All-Onion -- A Large-Scale Multi-Faceted Content-Centric Music Recommendation Dataset},
+year = {2022},
+booktitle = {Proc. of CIKM},
+pages = {4339–4343},
+numpages = {5},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2022_cikm_onion.png},
+    key = {value},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@inproceedings{peintner:cars:2022,
+ author = {Peintner, Andreas and Moscati, Marta and Parada-Cabaleiro, Emilia and Schedl, Markus and Zangerle, Eva},
+ booktitle = {Proc. of CARS -- ACM RecSys},
+ title = {Unsupervised Graph Embeddings for Session-based Recommendation with Item Features},
+ year = {2022},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2022_cars_gcnext.png},
+    key = {value},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+
+@phdthesis{Moscati:2019esr,
+    author = "Moscati, Marta",
+    title = "{Lepton Flavour Non-Universality - From Effective Field Theory to Extended Gauge Models}",
+    school = "KIT, Karlsruhe",
+    year = "2019",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2019_thesis.png},
+    key = {value},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{Moscati:2019unl,
+    author = "Moscati, Marta",
+    title = "{New Physics in b{\rightarrow}c\tau\nu: Impact of Polarisation Observables and  B<sub>c</sub>{\rightarrow}\tau\nu~}",
+    booktitle = "{Proc. of FPCP}",
+    year = "2019",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2019_fpcp.png},
+    key = {value},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{Blanke:2019aao,
+    author = "Moscati, Marta and Blanke, Monika and Nierste, Ulrich",
+    title = "{Interplay of {R<sub>{D<sup>{(*)}}</sup>}</sub> and $Zll$ in the Scalar Leptoquark Scenario}",
+    journal = "Springer Proc. Phys.",
+    volume = "234",
+    pages = "431--437",
+    year = "2019",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2018_fpcp.png},
+    key = {value},
+}
+
+@article{Blanke:2019qrx,
+    author = "Moscati, Marta and Blanke, Monika and Crivellin, Andreas and Kitahara, Teppei and  Nierste, Ulrich and Ni\v{s}and\v{z}i\'c, Ivan",
+    title = "{Addendum to \textquotedblleft{}Impact of polarization observables and  B<sub>c</sub>{\rightarrow}\tau\nu~ on new physics explanations of the b{\rightarrow}c\tau\nu~ anomaly''}",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "10",
+    pages = "035035",
+    year = "2019",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2019_addendum.png},
+    key = {value},
+}
+
+
+@article{Blanke:2018yud,
+    author = "Moscati, Marta and Blanke, Monika and Crivellin, Andreas and de Boer, Stefan and Kitahara, Teppei and Nierste, Ulrich and Ni\v{s}and\v{z}i\'c, Ivan",
+    title = "{Impact of polarization observables and B<sub>c</sub>{\rightarrow}\tau\nu~on new physics explanations of the b{\rightarrow}c\tau\nu~ anomaly}",
+    journal = "Phys. Rev. D",
+    volume = "99",
+    number = "7",
+    pages = "075006",
+    year = "2019",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2018_chi.png},
+    key = {value},
+}
+
+@article{Descotes-Genon:2017ptp,
+    author = "Moscati, Marta and Descotes-Genon, S\'ebastien and Moscati, Marta and Ricciardi, Giulia",
+    title = "{Nonminimal 331 model for lepton flavor universality violation in $b{\rightarrow}sll$ decays}",
+    journal = "Phys. Rev. D",
+    volume = "98",
+    number = "11",
+    pages = "115030",
+    year = "2018",
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2017_331.png},
+    key = {value},
 }
