--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -115,7 +115,7 @@ numpages = {5},
 }
 
 @article{Descotes-Genon:2017ptp,
-    author = "Moscati, Marta and Descotes-Genon, S\'ebastien and Moscati, Marta and Ricciardi, Giulia",
+    author = "Moscati, Marta and Descotes-Genon, S\'ebastien and Ricciardi, Giulia",
     title = "{Nonminimal 331 model for lepton flavor universality violation in $b{\rightarrow}sll$ decays}",
     journal = "Phys. Rev. D",
     volume = "98",
