--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,57 @@
+@inproceedings{ganhoer_moscati2024sibrar,
+    title = {A Multimodal Single-Branch Embedding Network for Recommendation in Cold-Start and Missing Modality Scenarios},
+    author = {Ganhör*, Christian and Moscati*, Marta and Hausberger, Anna and Nawaz, Shah and Schedl, Markus},
+    booktitle = {Proceedings of the 18th ACM Conference on Recommender Systems (RecSys)},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3640457.3688138},
+    doi = {10.1145/3640457.3688138},
+    pages = {380–390},
+    location = {Bari, Italy},
+    year = {2024}
+}
+
+@inproceedings{Moscati2024multimodal_rec,
+    title = {Multimodal Representation Learning for high-quality Recommendations in Cold-start and Beyond-Accuracy},
+    author = {Moscati, Marta},
+    booktitle = {Proceedings of the 18th ACM Conference on Recommender Systems (RecSys)},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    location = {Bari, Italy},
+    year = {2024}
+}
+
+@inproceedings{Escobedo2024SBO,
+    title = {Making Alice Appear Like Bob: A Probabilistic Preference Obfuscation Method For Implicit Feedback Recommendation Models},
+    author = {Escobedo, Gustavo and Moscati, Marta and Müllner, Peter and Kopeinik, Simone and Kowald, Dominik and Lex, Elisabeth and Schedl, Markus},
+    booktitle = {Proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD 2024)},
+    location = {Vilnius, Lithuania},
+    pages = {349--365},
+    month = {September},
+    year = {2024}
+}
+
+@inproceedings{nawaz2024fame,
+    title = {A Synopsis of FAME 2024 Challenge: Associating Faces with Voices in Multilingual Environments},
+    author = {Saeed, Muhammad Saad and Nawaz, Shah and Moscati, Marta and Kumar Das, Rohan and Tahir, Muhammad Salman and Zaheer, Muhammad Zaigham and Liaqat, Muhammad Irzam and Khan, Muhammad Haris and Nandakumar, Karthik and Yousaf, Muhammad Haroon and Schedl, Markus},
+    booktitle = {Companion of the 32nd ACM International Conference on Multimedia (MM)},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    doi = {10.1145/3674955.3685797},
+    location = {Melbourne, Australia},
+    year = {2024}
+}
+
+@inproceedings{Moscati2024emomrs,
+    title = {Emotion-Based Music Recommendation from Quality Annotations and Large-Scale User-Generated Tags},
+    author = {Moscati, Marta and Strauß, Hannah and Jacobsen, Peer-Ole and Peintner, Andreas and Zangerle, Eva and Zentner, Marcel and Schedl, Markus},
+    booktitle = {Proceedings of the 32nd ACM Conference on User Modeling, Adaptation and Personalization (UMAP)},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    doi = {10.1145/3627043.3659540},
+    location = {Cagliari, Italy},
+    year = {2024}
+}
 
 @inproceedings{Moscati2023actr_cf_music,
     title = {Integrating the ACT-R Framework with Collaborative Filtering for Explainable Sequential Music Recommendation},
