--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,11 @@
     doi = {10.1145/3640457.3688138},
     pages = {380–390},
     location = {Bari, Italy},
-    year = {2024}
+    year = {2024},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2024_SiBraR.png},
+    key = {value},
 }
 
 @inproceedings{Moscati2024multimodal_rec,
@@ -18,7 +22,11 @@
     publisher = {Association for Computing Machinery},
     address = {New York, NY, USA},
     location = {Bari, Italy},
-    year = {2024}
+    year = {2024},
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2024_ds.png},
+    key = {value},
 }
 
 @inproceedings{Escobedo2024SBO,
@@ -28,18 +36,26 @@
     location = {Vilnius, Lithuania},
     pages = {349--365},
     month = {September},
-    year = {2024}
+    year = {2024},
+    bibtex_show = {true},
+    selected = {false},
+    preview = {2024_09_ECMLPKDD_Escobedo_SBO_teaser.png},
+    key = {value},
 }
 
 @inproceedings{nawaz2024fame,
     title = {A Synopsis of FAME 2024 Challenge: Associating Faces with Voices in Multilingual Environments},
-    author = {Saeed, Muhammad Saad and Nawaz, Shah and Moscati, Marta and Kumar Das, Rohan and Tahir, Muhammad Salman and Zaheer, Muhammad Zaigham and Liaqat, Muhammad Irzam and Khan, Muhammad Haris and Nandakumar, Karthik and Yousaf, Muhammad Haroon and Schedl, Markus},
+    author = {Saeed*, Muhammad Saad and Nawaz*, Shah and Moscati*, Marta and Kumar Das*, Rohan and Tahir, Muhammad Salman and Zaheer, Muhammad Zaigham and Liaqat, Muhammad Irzam and Khan, Muhammad Haris and Nandakumar, Karthik and Yousaf, Muhammad Haroon and Schedl, Markus},
     booktitle = {Companion of the 32nd ACM International Conference on Multimedia (MM)},
     publisher = {Association for Computing Machinery},
     address = {New York, NY, USA},
     doi = {10.1145/3674955.3685797},
     location = {Melbourne, Australia},
-    year = {2024}
+    year = {2024},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2024_10_fame.png},
+    key = {value},
 }
 
 @inproceedings{Moscati2024emomrs,
@@ -50,7 +66,11 @@
     address = {New York, NY, USA},
     doi = {10.1145/3627043.3659540},
     location = {Cagliari, Italy},
-    year = {2024}
+    year = {2024},
+    bibtex_show = {true},
+    selected = {true},
+    preview = {2024_EmoMRS.png},
+    key = {value},
 }
 
 @inproceedings{Moscati2023actr_cf_music,
@@ -97,7 +117,7 @@ numpages = {5},
  title = {Unsupervised Graph Embeddings for Session-based Recommendation with Item Features},
  year = {2022},
     bibtex_show = {true},
-    selected = {true},
+    selected = {false},
     preview = {2022_cars_gcnext.png},
     key = {value},
 }
