--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,46 @@
+@inproceedings{Moscati2025CoBraR,
+    title = {Parameter-Efficient Single Collaborative Branch for Recommendation},
+    author = {Moscati, Marta and Nawaz, Shah and Schedl, Markus},
+    journal = {Proceedings of the Nineteenth ACM Conference on Recommender Systems},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    doi = {10.1145/3705328.3759302},
+    url = {https://doi.org/10.1145/3705328.3759302},
+    pages = {1256–1260},
+    year = {2025}
+}
+
+@inproceedings{Moscati2025UMAP_discoveryPattern,
+    title = {Familiarizing with Music: Discovery Patterns for Different Music Discovery Needs},
+    author = {Moscati, Marta and Afchar Darius and Schedl, Markus and Sguerra Bruno},
+    booktitle = {Proceedings of the 33rd ACM Conference on User Modeling, Adaptation and Personalization},
+    publisher = {Association for Computing Machinery},
+    doi = {https://doi.org/10.1145/3699682.3728333},
+    url = {https://dl.acm.org/doi/proceedings/10.1145/3699682},
+    pages = {63-73},
+    month = {June},
+    location = {New York, NY, United States},
+    year = {2025}
+}
+
+
+@inproceedings{Peintner2025emotional_rec,
+    title = {Nuanced Music Emotion Recognition via a Semi-Supervised Multi-Relational Graph Neural Network},
+    author = {Peintner, Andreas and Moscati, Marta and Kinoshita, Yu and Vogl, Richard and Knees, Peter and Schedl, Markus and Strauss, Hannah and Zenter, Marcel and Zangerle, Eva},
+    booktitle = {Transactions of the International Society for Music Information Retrieval},
+    publisher = {Association for Computing Machinery},
+    doi = {10.5334/tismir.235},
+    url = {https://transactions.ismir.net/},
+    volume = {8},
+    pages = {140-153},
+    month = {April},
+    year = {2025}
+}
+
+
+
+
+
 @inproceedings{ganhoer_moscati2024sibrar,
     title = {A Multimodal Single-Branch Embedding Network for Recommendation in Cold-Start and Missing Modality Scenarios},
     author = {Ganhör*, Christian and Moscati*, Marta and Hausberger, Anna and Nawaz, Shah and Schedl, Markus},
