--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,8 @@
     doi = {10.1145/3705328.3759302},
     url = {https://doi.org/10.1145/3705328.3759302},
     pages = {1256–1260},
-    year = {2025}
+    year = {2025},
+    preview = {2025_09_cobrar.png},
 }
 
 @inproceedings{Moscati2025UMAP_discoveryPattern,
@@ -20,7 +21,8 @@
     pages = {63-73},
     month = {June},
     location = {New York, NY, United States},
-    year = {2025}
+    year = {2025},
+    preview = {2025_06_UMAP_discoveryPattern.png},
 }
 
 
@@ -34,7 +36,8 @@
     volume = {8},
     pages = {140-153},
     month = {April},
-    year = {2025}
+    year = {2025},
+    preview = {srgnn-emo-cropped.png},
 }
 
 
