fix booktitle in cobrar

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @inproceedings{Moscati2025CoBraR,
     title = {Parameter-Efficient Single Collaborative Branch for Recommendation},
     author = {Moscati, Marta and Nawaz, Shah and Schedl, Markus},
-    journal = {Proceedings of the Nineteenth ACM Conference on Recommender Systems},
+    booktitle = {Proceedings of the 19th ACM Conference on Recommender Systems},
     publisher = {Association for Computing Machinery},
     address = {New York, NY, USA},
     doi = {10.1145/3705328.3759302},
