update selected publications and add MuRS paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,9 +7,23 @@
     doi = {10.1145/3705328.3759302},
     url = {https://doi.org/10.1145/3705328.3759302},
     pages = {1256–1260},
-    year = {2025},
+    year = {2025},,
+    selected = {true},
     preview = {2025_09_cobrar.png},
 }
+
+
+@inproceedings{moscati2025multimodal_music_retrieval,
+    title = {Audio, Lyrics, Videoclips, Interactions? An Analysis of Uni- and Multi-Modal Music Retrieval Systems in Terms of Accuracy and Beyond-Accuracy Aspects},
+    author = {Moscati, Marta and Escobedo, Gustavo and Hernandez, Eduardo and Pech\'{e}, Jonas and Schedl, Markus},
+    booktitle = {Proc. of the Workshop on Music Recommender Systems (MuRS) co-located with the ACM Conference on Recommender Systems (RecSys)},
+    location = {Prague, Czech Republic},
+    year = {2025},
+    preview = {2025_09_murs.png},
+    selected = {true},
+    url = {https://ceur-ws.org/Vol-4045/},
+}
+
 
 @inproceedings{Moscati2025UMAP_discoveryPattern,
     title = {Familiarizing with Music: Discovery Patterns for Different Music Discovery Needs},
@@ -22,13 +36,15 @@
     month = {June},
     location = {New York, NY, United States},
     year = {2025},
+    selected = {true},
     preview = {2025_06_UMAP_discoveryPattern.png},
 }
 
 
 @inproceedings{Peintner2025emotional_rec,
     title = {Nuanced Music Emotion Recognition via a Semi-Supervised Multi-Relational Graph Neural Network},
-    author = {Peintner, Andreas and Moscati, Marta and Kinoshita, Yu and Vogl, Richard and Knees, Peter and Schedl, Markus and Strauss, Hannah and Zenter, Marcel and Zangerle, Eva},
+    author = {Peintner, Andre,
+    selected = {true},as and Moscati, Marta and Kinoshita, Yu and Vogl, Richard and Knees, Peter and Schedl, Markus and Strauss, Hannah and Zenter, Marcel and Zangerle, Eva},
     booktitle = {Transactions of the International Society for Music Information Retrieval},
     publisher = {Association for Computing Machinery},
     doi = {10.5334/tismir.235},
@@ -36,6 +52,7 @@
     volume = {8},
     pages = {140-153},
     month = {April},
+    selected = {false},
     year = {2025},
     preview = {srgnn-emo-cropped.png},
 }
@@ -99,7 +116,7 @@
     location = {Melbourne, Australia},
     year = {2024},
     bibtex_show = {true},
-    selected = {true},
+    selected = {false},
     preview = {2024_10_fame.png},
     key = {value},
 }
@@ -219,6 +236,15 @@ numpages = {5},
     key = {value},
 }
 
+@inproceedings{moscati2026fame,
+      title={Face-voice Association in Multilingual Environments (FAME) 2026 Challenge Evaluation Plan},
+      author={\textbf{Moscati}, Marta and Ahmed Abdullah and Muhammad Saad Saeed and Shah Nawaz and Rohan Kumar Das and Muhammad Zaigham Zaheer and Junaid Mir and Muhammad Haroon Yousaf and Khalid Malik and Markus Schedl},
+      year={2026},
+      url={https://arxiv.org/pdf/2508.04592?},
+      selected={false},
+      bibtex_show={true},
+    booktitle = {To appear in Proc. of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
+}
 
 @article{Blanke:2018yud,
     author = "Moscati, Marta and Blanke, Monika and Crivellin, Andreas and de Boer, Stefan and Kitahara, Teppei and Nierste, Ulrich and Ni\v{s}and\v{z}i\'c, Ivan",
