add "equal contributions"

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,7 +75,8 @@
     bibtex_show = {true},
     selected = {true},
     preview = {2024_SiBraR.png},
-    key = {value},
+    key = {value},,
+    publisher = {*\textbf{Equal contributions}}
 }
 
 @inproceedings{Moscati2024multimodal_rec,
@@ -118,7 +119,8 @@
     bibtex_show = {true},
     selected = {false},
     preview = {2024_10_fame.png},
-    key = {value},
+    key = {value},,
+    publisher = {*\textbf{Equal contributions}}
 }
 
 @inproceedings{Moscati2024emomrs,
