--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
     doi = {10.1145/3705328.3759302},
     url = {https://doi.org/10.1145/3705328.3759302},
     pages = {1256–1260},
-    year = {2025},,
+    year = {2025},
     selected = {true},
     preview = {2025_09_cobrar.png},
 }
@@ -75,7 +75,7 @@
     bibtex_show = {true},
     selected = {true},
     preview = {2024_SiBraR.png},
-    key = {value},,
+    key = {value},
     publisher = {*\textbf{Equal contributions}}
 }
 
@@ -119,7 +119,7 @@
     bibtex_show = {true},
     selected = {false},
     preview = {2024_10_fame.png},
-    key = {value},,
+    key = {value},
     publisher = {*\textbf{Equal contributions}}
 }
 
