--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
     url = {https://doi.org/10.1145/3705328.3759302},
     pages = {1256–1260},
     year = {2025},
+    bibtex_show = {true},
     selected = {true},
     preview = {2025_09_cobrar.png},
 }
@@ -20,6 +21,7 @@
     location = {Prague, Czech Republic},
     year = {2025},
     preview = {2025_09_murs.png},
+    bibtex_show = {true},
     selected = {true},
     url = {https://ceur-ws.org/Vol-4045/},
 }
@@ -36,6 +38,7 @@
     month = {June},
     location = {New York, NY, United States},
     year = {2025},
+    bibtex_show = {true},
     selected = {true},
     preview = {2025_06_UMAP_discoveryPattern.png},
 }
@@ -43,8 +46,7 @@
 
 @inproceedings{Peintner2025emotional_rec,
     title = {Nuanced Music Emotion Recognition via a Semi-Supervised Multi-Relational Graph Neural Network},
-    author = {Peintner, Andre,
-    selected = {true},as and Moscati, Marta and Kinoshita, Yu and Vogl, Richard and Knees, Peter and Schedl, Markus and Strauss, Hannah and Zenter, Marcel and Zangerle, Eva},
+    author = {Peintner, Andreas and Moscati, Marta and Kinoshita, Yu and Vogl, Richard and Knees, Peter and Schedl, Markus and Strauss, Hannah and Zenter, Marcel and Zangerle, Eva},
     booktitle = {Transactions of the International Society for Music Information Retrieval},
     publisher = {Association for Computing Machinery},
     doi = {10.5334/tismir.235},
@@ -52,6 +54,7 @@
     volume = {8},
     pages = {140-153},
     month = {April},
+    bibtex_show = {true},
     selected = {false},
     year = {2025},
     preview = {srgnn-emo-cropped.png},
